logs/dag_id=people/run_id=manual__2023-11-03T175430.859049+0000/task_id=create_people_table/attempt=1.log
[2023-11-03T17:54:32.557+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T17:54:30.859049+00:00 [queued]>
[2023-11-03T17:54:32.573+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people.create_people_table manual__2023-11-03T17:54:30.859049+00:00 [queued]>
[2023-11-03T17:54:32.575+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T17:54:32.576+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-03T17:54:32.576+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-03T17:54:32.597+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_people_table> on 2023-11-03 17:54:30.859049+00:00
[2023-11-03T17:54:32.604+0000] {standard_task_runner.py:55} INFO - Started process 6981 to run task
[2023-11-03T17:54:32.607+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'people', 'create_people_table', 'manual__2023-11-03T17:54:30.859049+00:00', '--job-id', '92', '--raw', '--subdir', 'DAGS_FOLDER/people.py', '--cfg-path', '/tmp/tmp1zvp5bj3']
[2023-11-03T17:54:32.610+0000] {standard_task_runner.py:83} INFO - Job 92: Subtask create_people_table
[2023-11-03T17:54:32.677+0000] {task_command.py:376} INFO - Running <TaskInstance: people.create_people_table manual__2023-11-03T17:54:30.859049+00:00 [running]> on host 113d79be32ee
[2023-11-03T17:54:32.763+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=people
AIRFLOW_CTX_TASK_ID=create_people_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-03T17:54:30.859049+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-03T17:54:30.859049+00:00
[2023-11-03T17:54:32.775+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-11-03T17:54:32.779+0000] {sql.py:315} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS people (
                Index INT NOT NULL primary key,
                User_Id varchar(100),
                First_Name varchar(100),
                Last_Name varchar(100),
                Sex_Name varchar(100),
                Email_Name varchar(100),
            );
        , parameters: None
[2023-11-03T17:54:32.781+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 9:             );
                    ^

[2023-11-03T17:54:32.791+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=people, task_id=create_people_table, execution_date=20231103T175430, start_date=20231103T175432, end_date=20231103T175432
[2023-11-03T17:54:32.805+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 92 for task create_people_table (syntax error at or near ")"
LINE 9:             );
                    ^
; 6981)
[2023-11-03T17:54:32.823+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-03T17:54:32.852+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
